[package]
name = "yarsge-sdl2"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
sdl2 = "0.38.0"
rgb = "0.8.52"
anyhow = "1.0.28"
env_logger = "0.9.0"
log = "0.4.14"

[dependencies.clap]
version = "4.0.0"
features = ["derive"]

[dependencies.yarsge-core]
path = "../yarsge-core"
